# mindspore_test

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  OWNERS  README.md  README_CN.md  RELEASE.md  RELEASE_CN.md  RunCheckV3.sh  Third_Party_Open_Source_Software_Notice  build.bat  build.sh  requirements.txt  setup.py
mindspore/ccsrc/: CMakeLists.txt  OWNERS
mindspore/ccsrc/availability/: CMakeLists.txt
mindspore/ccsrc/backend/: OWNERS
mindspore/ccsrc/c_api/: CMakeLists.txt
mindspore/ccsrc/cmake/: ascend_compile_config.cmake  cpu_compile_config.cmake  gpu_compile_config.cmake  proto_compile_config.cmake  testcase_compile_config.cmake
mindspore/ccsrc/common/: CMakeLists.txt  env_vars.cc  fallback.cc  profiler.cc  python_utils.cc  thread_pool.cc
mindspore/ccsrc/cxx_api/: CMakeLists.txt  types.cc
mindspore/ccsrc/debug/: CMakeLists.txt  OWNERS  debug_services.cc  tensor_load.h  utils.cc
mindspore/ccsrc/distributed/: init.cc
mindspore/ccsrc/frontend/: OWNERS
mindspore/ccsrc/kernel/: CMakeLists.txt  OWNERS  common_utils.cc  common_utils.h  format_utils.cc  framework_utils.cc  framework_utils.h  graph_kernel_info.h  kernel.cc  kernel.h  kernel_build_info.cc  kernel_build_info.h  kernel_factory.h  kernel_info.cc  kernel_mod_cache.cc  kernel_mod_cache.h  ops_utils.h  philox_random.cc
mindspore/ccsrc/memory/: OWNERS
mindspore/ccsrc/minddata/: utils.h
mindspore/ccsrc/ms_extension/: CMakeLists.txt  OWNERS
mindspore/ccsrc/plugin/: OWNERS
mindspore/ccsrc/ps/: ps_context.cc  util.cc
mindspore/ccsrc/pybind_api/: CMakeLists.txt  OWNERS  init.cc  primitive_py_reg.cc  storage_py_reg.cc  tensor_py_reg.cc
mindspore/ccsrc/pyboost/: CMakeLists.txt  comm_handle.cc  comm_handle.h  comm_utils.cc  op_register.h  op_runner.h  pyboost_kernel_extra_func.h  pyboost_utils.cc  pyboost_utils.h
mindspore/ccsrc/pynative/: CMakeLists.txt  OWNERS  base.h  predict_out_type_map.cc  predict_out_type_map.h  pynative_execute.cc  pynative_execute.h  pynative_utils.cc  pynative_utils.h
mindspore/ccsrc/runtime/: OWNERS
mindspore/ccsrc/transform/: OWNERS
mindspore/ccsrc/utils/: CMakeLists.txt  OWNERS  anfalgo.cc  callbacks.cc  comm_manager.cc  compile_cache_context.cc  convert_utils.cc  convert_utils_py.cc  cse.cc  custom_aot_extra.h  custom_aot_extra_dual_abi.h  dlopen_macro.h  hook.cc  ms_device_shape_transfer.cc  offload_context.cc  parallel_context.cc  primfunc_utils.cc  primitive_utils.cc  pyobj_manager.cc  recompute_helper.cc  signal_util.cc  stub_tensor.cc  tensor_py.cc  tensor_py_wrapper.cc  tensor_utils.cc  utils.cc
mindspore/lite/minddata/: CMakeLists.txt
mindspore/ops/: CMakeLists.txt
mindspore/ops/api_def/: __abs__.yaml  __add__.yaml  __and__.yaml  __eq__.yaml  __iadd__.yaml  __ifloordiv__.yaml  __imatmul__.yaml  __imod__.yaml  __imul__.yaml  __isub__.yaml  __itruediv__.yaml  __mod__.yaml  __or__.yaml  __pow__.yaml  __sub__.yaml  __xor__.yaml  _to.yaml  abs.yaml  absolute.yaml  acos.yaml  acosh.yaml  add.yaml  add_.yaml  addbmm.yaml  addcdiv.yaml  addmm.yaml  addmv.yaml  addr.yaml  all.yaml  all_gather_matmul.yaml  allclose.yaml  any.yaml  arccos.yaml  arccosh.yaml  arcsin.yaml  arcsin_.yaml  arcsinh.yaml  arcsinh_.yaml  arctan.yaml  arctan2.yaml  (+195 more)
mindspore/ops/cmake/: merge_ops.cmake  op_def.cmake  ops.cmake  ops_grad.cmake  ops_host.cmake
mindspore/ops/grad/: grad_array_ops.cc  grad_clip_ops.cc  grad_comm_ops.cc  grad_debug_ops.cc  grad_image_ops.cc  grad_implementations_ops.cc  grad_inner_ops.cc  grad_linalg_ops.cc  grad_math_ops.cc  grad_nn_ops.cc  grad_other_ops.cc  grad_quant_ops.cc  grad_scalar_ops.cc  grad_scipy_ops.cc  grad_sequence_ops.cc  grad_sparse_ops.cc  grad_utils.cc  grad_utils.h
mindspore/ops/infer/: LayerNormBetaGammaBackprop.cc  LayerNormXBackprop.cc  accumulate_n_v2.cc  adam.cc  adam_apply_one.cc  adam_apply_one_with_decay.cc  adam_no_update_param.cc  adaptive_avg_pool_2d.cc  adaptive_avg_pool_3d.cc  adaptive_max_pool2d.cc  adaptive_max_pool2d.h  adaptive_max_pool3d.cc  add_layernorm.cc  add_rms_norm.cc  add_rms_norm.h  add_v2.cc  adder.cc  adjust_contrastv2.cc  adjust_hue.cc  adjust_saturation.cc  affine.cc  affine_grid.cc  all.cc  all_finite.cc  all_finite.h  all_gather.cc  all_gather_matmul.cc  all_gather_matmul.h  all_gather_v.cc  all_gather_v.h  all_reduce.cc  all_swap.cc  all_to_all.cc  all_to_all_all_gather_batchmatmul.cc  all_to_all_ascend.cc  all_to_all_v.cc  all_to_all_v.h  all_to_all_v_c.cc  all_to_all_v_c.h  angle_atom_energy.cc  (+650 more)
mindspore/ops/kernel/: CMakeLists.txt
mindspore/ops/op_def/: arithmetic_ops.h  array_op_name.h  array_ops.h  comparison_ops.h  conv_pool_op_name.h  conv_pool_ops.h  framework_op_name.h  framework_ops.h  image_ops.h  lite_ops.h  math_op_name.h  math_ops.h  nn_ops.h  nn_optimizer_ops.h  op_enum.cc  op_enum.h  ops_def.cc  ops_def.h  other_op_name.h  other_ops.h  prim_def.cc  random_ops.h  sequence_ops.h  sparse_ops.h  sparse_tensor_ops.h  structure_ops.h
mindspore/ops/ops_api_def/: add.yaml  argmax.yaml  cos.yaml  div.yaml  floor.yaml  gather.yaml  greater.yaml  isclose.yaml  less.yaml  less_equal.yaml  log.yaml  logical_and.yaml  logical_not.yaml  logical_or.yaml  max.yaml  maximum.yaml  min.yaml  minimum.yaml  mul.yaml  nan_to_num.yaml  not_equal.yaml  permute.yaml  remainder.yaml  reshape.yaml  round.yaml  rsqrt.yaml  sort.yaml  split.yaml  tanh.yaml  tril.yaml  where.yaml
mindspore/ops/ops_utils/: memory_overlap.cc  memory_overlap.h  ms_extension.h  op_constants.h  op_utils.cc  op_utils.h  type_dispatch.h
mindspore/ops/tensor_func_def/: __add__.yaml  add.yaml  argmax.yaml  ceil.yaml  clamp.yaml  clip.yaml  cos.yaml  div.yaml  eq.yaml  erf.yaml  exp.yaml  gather.yaml  gt.yaml  index_select.yaml  isclose.yaml  isfinite.yaml  le.yaml  less.yaml  less_equal.yaml  log.yaml  logical_and.yaml  logical_not.yaml  logical_or.yaml  masked_select.yaml  matmul.yaml  max.yaml  maximum.yaml  mean.yaml  min.yaml  minimum.yaml  mul.yaml  nan_to_num.yaml  ne.yaml  neg.yaml  not_equal.yaml  remainder.yaml  repeat_interleave.yaml  sigmoid.yaml  tanh.yaml  to.yaml  (+3 more)
mindspore/ops/view/: chunk_strides_calc.cc  (+53 more)
(+22016 files in other folders)
